Improve symbol resolution and type inference